unpackaged/main/default/objects/DeployScriptConf__mdt/DeployScriptConf__mdt.object-meta.xml
<CustomObject>
    <description>Which Method of SandboxPostCopyScript for which scope have to execute after sandbox refresh or deploy</description>
    <label>Deploy Script Configuration</label>
    <pluralLabel>Deploy Script Configurations</pluralLabel>
</CustomObject>