unpackaged/main/default/objects/DeployScriptConf__mdt/fields/Class__c.field-meta.xml
<CustomField>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </CustomField>