unpackaged/main/default/objects/DeployScriptConf__mdt/fields/ContainsNonSetupObjectDML__c.field-meta.xml
<CustomField>
        <fullName>ContainsNonSetupObjectDML__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the code triggered by this custom metadata contains only DMLs on Non Setup Objects</description>
        <label>ContainsNonSetupObjectDML</label>
        <type>Checkbox</type>
    </CustomField>