unpackaged/main/default/objects/DeployScriptConf__mdt/fields/ContainsSetupObjectDML__c.field-meta.xml
<CustomField>
        <fullName>ContainsSetupObjectDML__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the code triggered by this custom metadata contains only DMLs on Setup Objects</description>
        <label>ContainsSetupObjectDML</label>
        <type>Checkbox</type>
    </CustomField>