unpackaged/main/default/objects/DeployScriptConf__mdt/fields/OrderOfExecution__c.field-meta.xml
<CustomField>
        <fullName>OrderOfExecution__c</fullName>
        <description>The Order of execution for the current method.
Integer values are reserved for global methods.
Decimal values are reserved for region specific methods.</description>
        <inlineHelpText>The Order of execution for the current method.
Integer values are reserved for global methods.
Decimal values are reserved for region specific methods.</inlineHelpText>
        <label>Order of Execution</label>
        <precision>18</precision>
        <required>true</required>
        <scale>9</scale>
        <type>Number</type>
    </CustomField>