unpackaged/main/default/objects/DeployScriptConf__mdt/fields/Scope__c.field-meta.xml
<CustomField>
        <fullName>Scope__c</fullName>
        <label>Scope</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GL</fullName>
                </value>
                <value>
                    <fullName>PRD</fullName>
                </value>
                <value>
                    <fullName>SBX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>