unpackaged/main/default/objects/DeployScriptConf__mdt/listViews/All.listView-meta.xml
<ListView>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>Class__c</columns>
        <columns>OrderOfExecution__c</columns>
        <columns>IsActive__c</columns>
        <columns>Scope__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>